--- a/index.html
+++ b/index.html
@@ -91,6 +91,9 @@
                 <div class="npmlogo">
                     <img src="npm-logo.png" alt="bb">
                 </div>
+                <!-- <div class="nmplogo">
+                    <svg viewBox="0 0 27.23 27.23"><rect fill="#333333" width="27.23" height="27.23" rx="2"></rect><polygon fill="#fff" points="5.8 21.75 13.66 21.75 13.67 9.98 17.59 9.98 17.58 21.76 21.51 21.76 21.52 6.06 5.82 6.04 5.8 21.75"></polygon></svg>
+                </div> -->
             </div>
             <div class="footer1">
                 <div class="footeritem1">Support</div>
